<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/centerHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/centerVerticalLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <RelativeLayout
        android:layout_above="@id/heightLayout"
        android:id="@+id/Male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@+id/centerVerticalLine"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170px"
            android:layout_above="@id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male"></ImageView>

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/female"></ImageView>

        <TextView
            android:id="@+id/textfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/femaletext"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerHorizontalLine"
        android:layout_marginBottom="-50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/CurrentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/startingheight"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/CurrentHeight"
            android:fontFamily="@font/raleway"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/SeekbarForHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/CalculateBmi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calculate_your_bmi"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

    </android.widget.Button>

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="15dp">
        </TextView>

        <TextView
            android:id="@+id/CurrentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingweight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/DecrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/IncrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:contentDescription="@string/todo">
            </ImageView>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>

        <TextView
            android:id="@+id/CurrentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingage"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:id="@+id/DecrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:id="@+id/IncrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>